src/main/gen/BranchscriptParser.java
// Generated from D:/GitHub/Branchscript/src/main/resources\Branchscript.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BranchscriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OPEN_HEADER=1, CLOSE_HEADER=2, HEADER_SEPARATOR=3, OPEN_ANSWER=4, OPEN_LINK=5, 
		OPEN_COLLECTION=6, CLOSE_COLLECTION=7, COLLECTION_DELIMITER=8, BOOL_TRUE=9, 
		BOOL_FALSE=10, INCREMENT=11, DECREMENT=12, ASSIGN=13, EQUAL=14, GREATER=15, 
		LESS=16, TRIGGER_KEYWORD=17, OPTIONS_KEYWORD=18, SETFLAGS_KEYWORD=19, 
		IF_KEYWORD=20, IF_AND_KEYWORD=21, IF_OR_KEYWORD=22, ID=23, NUMBER=24, 
		STRING=25, WS=26;
	public static final int
		RULE_script = 0, RULE_conversation = 1, RULE_conversationPerson = 2, RULE_conversationId = 3, 
		RULE_triggerId = 4, RULE_conversationHeader = 5, RULE_conversationBody = 6, 
		RULE_conversationFragment = 7, RULE_conversationLink = 8, RULE_linkCondition = 9, 
		RULE_ifCondition = 10, RULE_ifAndCondition = 11, RULE_ifOrCondition = 12, 
		RULE_conditionCollection = 13, RULE_flagCondition = 14, RULE_conditionTrue = 15, 
		RULE_conditionEqual = 16, RULE_conditionGreater = 17, RULE_conditionLess = 18, 
		RULE_fragmentDialogue = 19, RULE_fragmentAnswer = 20, RULE_fragmentTrigger = 21, 
		RULE_triggerOptionsCollection = 22, RULE_setFlags = 23, RULE_flagAssignmentCollection = 24, 
		RULE_flagAssignment = 25, RULE_assignmentTrue = 26, RULE_assignmentAssign = 27, 
		RULE_assignmentIncrement = 28, RULE_assignmentDecrement = 29, RULE_value = 30, 
		RULE_boolValue = 31, RULE_intValue = 32;
	public static final String[] ruleNames = {
		"script", "conversation", "conversationPerson", "conversationId", "triggerId", 
		"conversationHeader", "conversationBody", "conversationFragment", "conversationLink", 
		"linkCondition", "ifCondition", "ifAndCondition", "ifOrCondition", "conditionCollection", 
		"flagCondition", "conditionTrue", "conditionEqual", "conditionGreater", 
		"conditionLess", "fragmentDialogue", "fragmentAnswer", "fragmentTrigger", 
		"triggerOptionsCollection", "setFlags", "flagAssignmentCollection", "flagAssignment", 
		"assignmentTrue", "assignmentAssign", "assignmentIncrement", "assignmentDecrement", 
		"value", "boolValue", "intValue"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'['", "']'", "'/'", "'-'", "'->'", "'('", "')'", "','", "'true'", 
		"'false'", "'++'", "'--'", "'='", "'=='", "'>'", "'<'", "'TRIGGER'", "'OPTIONS'", 
		"'SET'", "'IF'", "'IF_AND'", "'IF_OR'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "OPEN_HEADER", "CLOSE_HEADER", "HEADER_SEPARATOR", "OPEN_ANSWER", 
		"OPEN_LINK", "OPEN_COLLECTION", "CLOSE_COLLECTION", "COLLECTION_DELIMITER", 
		"BOOL_TRUE", "BOOL_FALSE", "INCREMENT", "DECREMENT", "ASSIGN", "EQUAL", 
		"GREATER", "LESS", "TRIGGER_KEYWORD", "OPTIONS_KEYWORD", "SETFLAGS_KEYWORD", 
		"IF_KEYWORD", "IF_AND_KEYWORD", "IF_OR_KEYWORD", "ID", "NUMBER", "STRING", 
		"WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Branchscript.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BranchscriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ScriptContext extends ParserRuleContext {
		public List<ConversationContext> conversation() {
			return getRuleContexts(ConversationContext.class);
		}
		public ConversationContext conversation(int i) {
			return getRuleContext(ConversationContext.class,i);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BranchscriptListener ) ((BranchscriptListener)listener).enterScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BranchscriptListener ) ((BranchscriptListener)listener).exitScript(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BranchscriptVisitor ) return ((BranchscriptVisitor<? extends T>)visitor).visitScript(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_script);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(66);
				conversation();
				}
				}
				setState(69); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==OPEN_HEADER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConversationContext extends ParserRuleContext {
		public ConversationHeaderContext conversationHeader() {
			return getRuleContext(ConversationHeaderContext.class,0);
		}
		public ConversationBodyContext conversationBody() {
			return getRuleContext(ConversationBodyContext.class,0);
		}
		public ConversationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conversation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BranchscriptListener ) ((BranchscriptListener)listener).enterConversation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BranchscriptListener ) ((BranchscriptListener)listener).exitConversation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BranchscriptVisitor ) return ((BranchscriptVisitor<? extends T>)visitor).visitConversation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConversationContext conversation() throws RecognitionException {
		ConversationContext _localctx = new ConversationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_conversation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			conversationHeader();
			setState(72);
			conversationBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConversationPersonContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(BranchscriptParser.ID, 0); }
		public ConversationPersonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conversationPerson; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BranchscriptListener ) ((BranchscriptListener)listener).enterConversationPerson(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BranchscriptListener ) ((BranchscriptListener)listener).exitConversationPerson(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BranchscriptVisitor ) return ((BranchscriptVisitor<? extends T>)visitor).visitConversationPerson(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConversationPersonContext conversationPerson() throws RecognitionException {
		ConversationPersonContext _localctx = new ConversationPersonContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_conversationPerson);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConversationIdContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(BranchscriptParser.ID, 0); }
		public ConversationIdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conversationId; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BranchscriptListener ) ((BranchscriptListener)listener).enterConversationId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BranchscriptListener ) ((BranchscriptListener)listener).exitConversationId(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BranchscriptVisitor ) return ((BranchscriptVisitor<? extends T>)visitor).visitConversationId(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConversationIdContext conversationId() throws RecognitionException {
		ConversationIdContext _localctx = new ConversationIdContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_conversationId);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TriggerIdContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(BranchscriptParser.ID, 0); }
		public TriggerIdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_triggerId; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BranchscriptListener ) ((BranchscriptListener)listener).enterTriggerId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BranchscriptListener ) ((BranchscriptListener)listener).exitTriggerId(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BranchscriptVisitor ) return ((BranchscriptVisitor<? extends T>)visitor).visitTriggerId(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TriggerIdContext triggerId() throws RecognitionException {
		TriggerIdContext _localctx = new TriggerIdContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_triggerId);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConversationHeaderContext extends ParserRuleContext {
		public TerminalNode OPEN_HEADER() { return getToken(BranchscriptParser.OPEN_HEADER, 0); }
		public ConversationPersonContext conversationPerson() {
			return getRuleContext(ConversationPersonContext.class,0);
		}
		public TerminalNode HEADER_SEPARATOR() { return getToken(BranchscriptParser.HEADER_SEPARATOR, 0); }
		public ConversationIdContext conversationId() {
			return getRuleContext(ConversationIdContext.class,0);
		}
		public TerminalNode CLOSE_HEADER() { return getToken(BranchscriptParser.CLOSE_HEADER, 0); }
		public ConversationHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conversationHeader; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BranchscriptListener ) ((BranchscriptListener)listener).enterConversationHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BranchscriptListener ) ((BranchscriptListener)listener).exitConversationHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BranchscriptVisitor ) return ((BranchscriptVisitor<? extends T>)visitor).visitConversationHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConversationHeaderContext conversationHeader() throws RecognitionException {
		ConversationHeaderContext _localctx = new ConversationHeaderContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_conversationHeader);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(OPEN_HEADER);
			setState(81);
			conversationPerson();
			setState(82);
			match(HEADER_SEPARATOR);
			setState(83);
			conversationId();
			setState(84);
			match(CLOSE_HEADER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConversationBodyContext extends ParserRuleContext {
		public List<ConversationFragmentContext> conversationFragment() {
			return getRuleContexts(ConversationFragmentContext.class);
		}
		public ConversationFragmentContext conversationFragment(int i) {
			return getRuleContext(ConversationFragmentContext.class,i);
		}
		public ConversationBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conversationBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BranchscriptListener ) ((BranchscriptListener)listener).enterConversationBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BranchscriptListener ) ((BranchscriptListener)listener).exitConversationBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BranchscriptVisitor ) return ((BranchscriptVisitor<? extends T>)visitor).visitConversationBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConversationBodyContext conversationBody() throws RecognitionException {
		ConversationBodyContext _localctx = new ConversationBodyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_conversationBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(86);
				conversationFragment();
				}
				}
				setState(89); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OPEN_LINK) | (1L << TRIGGER_KEYWORD) | (1L << STRING))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConversationFragmentContext extends ParserRuleContext {
		public FragmentDialogueContext fragmentDialogue() {
			return getRuleContext(FragmentDialogueContext.class,0);
		}
		public FragmentTriggerContext fragmentTrigger() {
			return getRuleContext(FragmentTriggerContext.class,0);
		}
		public ConversationLinkContext conversationLink() {
			return getRuleContext(ConversationLinkContext.class,0);
		}
		public ConversationFragmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conversationFragment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BranchscriptListener ) ((BranchscriptListener)listener).enterConversationFragment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BranchscriptListener ) ((BranchscriptListener)listener).exitConversationFragment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BranchscriptVisitor ) return ((BranchscriptVisitor<? extends T>)visitor).visitConversationFragment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConversationFragmentContext conversationFragment() throws RecognitionException {
		ConversationFragmentContext _localctx = new ConversationFragmentContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_conversationFragment);
		try {
			setState(94);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STRING:
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				fragmentDialogue();
				}
				break;
			case TRIGGER_KEYWORD:
				enterOuterAlt(_localctx, 2);
				{
				setState(92);
				fragmentTrigger();
				}
				break;
			case OPEN_LINK:
				enterOuterAlt(_localctx, 3);
				{
				setState(93);
				conversationLink();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConversationLinkContext extends ParserRuleContext {
		public TerminalNode OPEN_LINK() { return getToken(BranchscriptParser.OPEN_LINK, 0); }
		public ConversationIdContext conversationId() {
			return getRuleContext(ConversationIdContext.class,0);
		}
		public LinkConditionContext linkCondition() {
			return getRuleContext(LinkConditionContext.class,0);
		}
		public ConversationLinkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conversationLink; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BranchscriptListener ) ((BranchscriptListener)listener).enterConversationLink(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BranchscriptListener ) ((BranchscriptListener)listener).exitConversationLink(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BranchscriptVisitor ) return ((BranchscriptVisitor<? extends T>)visitor).visitConversationLink(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConversationLinkContext conversationLink() throws RecognitionException {
		ConversationLinkContext _localctx = new ConversationLinkContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_conversationLink);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(OPEN_LINK);
			setState(97);
			conversationId();
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF_KEYWORD) | (1L << IF_AND_KEYWORD) | (1L << IF_OR_KEYWORD))) != 0)) {
				{
				setState(98);
				linkCondition();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LinkConditionContext extends ParserRuleContext {
		public IfConditionContext ifCondition() {
			return getRuleContext(IfConditionContext.class,0);
		}
		public IfAndConditionContext ifAndCondition() {
			return getRuleContext(IfAndConditionContext.class,0);
		}
		public IfOrConditionContext ifOrCondition() {
			return getRuleContext(IfOrConditionContext.class,0);
		}
		public LinkConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_linkCondition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BranchscriptListener ) ((BranchscriptListener)listener).enterLinkCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BranchscriptListener ) ((BranchscriptListener)listener).exitLinkCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BranchscriptVisitor ) return ((BranchscriptVisitor<? extends T>)visitor).visitLinkCondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LinkConditionContext linkCondition() throws RecognitionException {
		LinkConditionContext _localctx = new LinkConditionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_linkCondition);
		try {
			setState(104);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF_KEYWORD:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				ifCondition();
				}
				break;
			case IF_AND_KEYWORD:
				enterOuterAlt(_localctx, 2);
				{
				setState(102);
				ifAndCondition();
				}
				break;
			case IF_OR_KEYWORD:
				enterOuterAlt(_localctx, 3);
				{
				setState(103);
				ifOrCondition();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfConditionContext extends ParserRuleContext {
		public TerminalNode IF_KEYWORD() { return getToken(BranchscriptParser.IF_KEYWORD, 0); }
		public FlagConditionContext flagCondition() {
			return getRuleContext(FlagConditionContext.class,0);
		}
		public IfConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifCondition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BranchscriptListener ) ((BranchscriptListener)listener).enterIfCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BranchscriptListener ) ((BranchscriptListener)listener).exitIfCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BranchscriptVisitor ) return ((BranchscriptVisitor<? extends T>)visitor).visitIfCondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfConditionContext ifCondition() throws RecognitionException {
		IfConditionContext _localctx = new IfConditionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_ifCondition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(IF_KEYWORD);
			setState(107);
			flagCondition();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfAndConditionContext extends ParserRuleContext {
		public TerminalNode IF_AND_KEYWORD() { return getToken(BranchscriptParser.IF_AND_KEYWORD, 0); }
		public ConditionCollectionContext conditionCollection() {
			return getRuleContext(ConditionCollectionContext.class,0);
		}
		public IfAndConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifAndCondition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BranchscriptListener ) ((BranchscriptListener)listener).enterIfAndCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BranchscriptListener ) ((BranchscriptListener)listener).exitIfAndCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BranchscriptVisitor ) return ((BranchscriptVisitor<? extends T>)visitor).visitIfAndCondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfAndConditionContext ifAndCondition() throws RecognitionException {
		IfAndConditionContext _localctx = new IfAndConditionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_ifAndCondition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(IF_AND_KEYWORD);
			setState(110);
			conditionCollection();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfOrConditionContext extends ParserRuleContext {
		public TerminalNode IF_OR_KEYWORD() { return getToken(BranchscriptParser.IF_OR_KEYWORD, 0); }
		public ConditionCollectionContext conditionCollection() {
			return getRuleContext(ConditionCollectionContext.class,0);
		}
		public IfOrConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifOrCondition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BranchscriptListener ) ((BranchscriptListener)listener).enterIfOrCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BranchscriptListener ) ((BranchscriptListener)listener).exitIfOrCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BranchscriptVisitor ) return ((BranchscriptVisitor<? extends T>)visitor).visitIfOrCondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfOrConditionContext ifOrCondition() throws RecognitionException {
		IfOrConditionContext _localctx = new IfOrConditionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_ifOrCondition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(IF_OR_KEYWORD);
			setState(113);
			conditionCollection();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionCollectionContext extends ParserRuleContext {
		public TerminalNode OPEN_COLLECTION() { return getToken(BranchscriptParser.OPEN_COLLECTION, 0); }
		public List<FlagConditionContext> flagCondition() {
			return getRuleContexts(FlagConditionContext.class);
		}
		public FlagConditionContext flagCondition(int i) {
			return getRuleContext(FlagConditionContext.class,i);
		}
		public TerminalNode CLOSE_COLLECTION() { return getToken(BranchscriptParser.CLOSE_COLLECTION, 0); }
		public List<TerminalNode> COLLECTION_DELIMITER() { return getTokens(BranchscriptParser.COLLECTION_DELIMITER); }
		public TerminalNode COLLECTION_DELIMITER(int i) {
			return getToken(BranchscriptParser.COLLECTION_DELIMITER, i);
		}
		public ConditionCollectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionCollection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BranchscriptListener ) ((BranchscriptListener)listener).enterConditionCollection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BranchscriptListener ) ((BranchscriptListener)listener).exitConditionCollection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BranchscriptVisitor ) return ((BranchscriptVisitor<? extends T>)visitor).visitConditionCollection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionCollectionContext conditionCollection() throws RecognitionException {
		ConditionCollectionContext _localctx = new ConditionCollectionContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_conditionCollection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(OPEN_COLLECTION);
			setState(116);
			flagCondition();
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COLLECTION_DELIMITER) {
				{
				{
				setState(117);
				match(COLLECTION_DELIMITER);
				setState(118);
				flagCondition();
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(124);
			match(CLOSE_COLLECTION);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

